fixed label alignment when including basic next to basic+extra

--- a/src/sass/md-checkbox.sass
+++ b/src/sass/md-checkbox.sass
@@ -62,7 +62,7 @@
   // if has extra text ('small' tag)
   &.has--text
     > div
-      padding-left: 45px
+      padding-top: $checkbox-font-size/2 - 2
     // extra label text
     small
       display: block
@@ -70,9 +70,6 @@
       color: $checkbox-text-color
       opacity: 0.65
       padding-top: 2px
-    .md-checkbox--fake
-      position: absolute
-      top: -8px
 
   // error class added
   &.with--error
